standardized fonts, increased contrast, fixed background bug, changed card aspect ratio

--- a/portfolio/src/AppVariant.css
+++ b/portfolio/src/AppVariant.css
@@ -1,40 +1,48 @@
 :root {
-    --project-background-color:#051818;
+    --project-background-color:#172828;
     --common-width: 75%;
-    --basic-text: slategray;
+    --basic-text: rgba(225, 240, 240, 0.8);
     --bright-text: ghostwhite;
     --common-row-gap: 20px;
     --sample-image: url('https://images.unsplash.com/photo-1606503153255-59d8b8b82176?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80');
+    --font-h1: 175%;
+    --font-h2: 150%;
+    --font-body: 125%;
+    --font-sub: 100%;
+    --column-width: 360px;
   }
   * {
     box-sizing: border-box;
   }
-  
+
+ 
   body {
+    margin:0;
+    padding:0;
+  }
+  .App {
     /* background-color:darkslategrey; */
     background:radial-gradient(
       ellipse at left top, 
-      #003333 0%,
-      #002222 5%,
-      #002020 10%,
+      #004444 0%,
+      #003333 5%,
+      #002222 10%,
       #001818 20%,
       #001616 40%, 
       #001111 100%);
     font-family:  Helvetica, Arial, sans-serif;
     color:var(--basic-text);
     height:100vh;
+    overflow:auto;
     /* filter:blur(10px); */
     z-index:-1;
   }
-  .App {
-    padding:0;
-    margin:0;
-  }
+ 
   hr {
     width:var(--common-width);
     height:0.25rem;
-    background-color: slategrey;
-    border-color: slategray;
+    background-color: var(--basic-text);
+    border-color: var(--basic-text);
     box-shadow: 2px 5px #001111;
     margin-bottom: var(--common-row-gap);
     margin-top: var(--common-row-gap);
@@ -49,7 +57,7 @@
   
   .my-name {
     color:var(--bright-text);
-    font-size: 175%;
+    font-size: var(--font-h1);
     text-shadow: 2px 5px rgba(0, 11, 11, 25%);
     
   }
@@ -57,8 +65,7 @@
     display:none;
   }
   .label-email {
-    /* font-size:24px; */
-    content:'';
+    font-size:var(--font-h2);
     display:none;
   }
   .titlebar-contact, .project-list, .bio {
@@ -78,23 +85,26 @@
   }
   
   .project-list {
-    height: 71vh;
+    height: 70vh;
+    /* display:flex;
+    flex-wrap: wrap; */
     display:grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    gap:3%
+    grid-template-columns: repeat(auto-fit, minmax(var(--column-width), 1fr));
+    gap:3%;
   }
   .project {
-    width: 100%;
-
-    border-radius:10px;
+    /* max-width:400px; */
+    width: var(--column-width);
+    height:70vh;
+    border-radius:15px;
     position:relative;
     margin-left:auto;
     margin-right:auto;
     background-color: var(--project-background-color);
     box-shadow: 10px 5px #001111;
     border-width: 1px;
-    border-style: solid;
-    border-color: #446666;
+    /* border-style: solid; */
+    /* border-color: #446666; */
   }
   
   
@@ -118,7 +128,7 @@
     /* border:solid; */
   }
  .bio-greeting{
-    font-size:2.2rem;
+    font-size:var(--font-h2);
     height:100%;    
     /* border:solid;  */
   }
@@ -127,7 +137,7 @@
     /* border:solid; */
     grid-area: 2 / 1 / span 1 / span 2;
     position:relative;
-    font-size:135%;
+    font-size:var(--font-h2);
   }
   .bio-wide, .bio-narrow {
     position:absolute;
@@ -144,7 +154,7 @@
   .bio-name {
     display:inline;
     color:var(--bright-text);
-    font-size: 200%;
+    font-size: var(--font-h1);
     text-shadow: 2px 5px rgba(0, 11, 11, 25%);
     /* border:solid; */
   }
@@ -153,7 +163,7 @@
     display:flex;
     align-items: center;
     flex-direction: row-reverse;
-    font-size:120%;
+    font-size:var(--font-h2);
     /* vertical-align: middle; */
   }
   .bio-email p {
@@ -178,7 +188,8 @@
     width:100%;
   }
   .project-image {
-    background: linear-gradient(180deg, rgba(05, 18, 18, 1) 0%, rgba(255,255,255,0) 10%,  rgba(255,255,255,0) 90%,rgba(05, 18, 18, 1)) 100%, var(--sample-image);
+    /* background: linear-gradient(180deg, rgba(05, 18, 18, 1) 0%, rgba(255,255,255,0) 10%,  rgba(255,255,255,0) 90%,rgba(05, 18, 18, 1)) 100%, var(--sample-image); */
+    background: var(--sample-image);
     z-index:0;
     opacity:30%;
     background-size:cover;
@@ -193,19 +204,16 @@
     padding-left: 5%;
   }
   .project-name {
-    font-size:125%;
+    font-size:var(--font-h2);
     z-index:1;
     position:absolute;
     bottom:0;
   }
 
   .project-name p {
-
     display:inline;
-    font-size:75%;
-
+    font-size:var(--font-body);
   }
-
 
   .project-demo {
     padding: 1% 2%;
@@ -244,26 +252,7 @@
     cursor: pointer;
   }
   
-  @media only screen and (max-width:1200px) {
-    .project-list {
-        grid-template-columns: 1fr 1fr;
-    }
-    .bio-blurb {
-      font-size:115%;
-    }
-    .bio-greeting {
-      font-size:2rem;
-    }
-
-  }
-
-  @media only screen and (max-width:800px) {
-    .project-list {
-        grid-template-columns: 1fr;
-    }
-    .project {
-      height:30vh;
-    }
+  @media only screen and (max-width:600px) {
     .label-email {
       /* font-size:24px; */
       content:'';
@@ -283,6 +272,11 @@
       grid-area: 1 / 1 / span 1 / span 2;
     }
     .bio-blurb {
-      font-size:150%;
+      font-size:var(--font-body);
+    }
+  }
+  @media only screen and (max-width:500px) {
+    :root {
+      --column-width: 250px;
     }
   }
